<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_greyish"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_image"
            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorHint"
            android:focusable="true"
            android:layout_marginTop="30dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txt_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:focusable="false"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/latitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Latitude"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/longitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Longitude"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtopenday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Open Day"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtjambuka"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Start Time"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtjamtutup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Close Time"
                android:padding="10dp"
                android:inputType="textMultiLine|textCapWords"
                android:textColor="@color/colorCell"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_take"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_tombol"
            android:padding="3dp"
            android:text="@string/photo"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:text="SAVE"
            android:background="@drawable/bg_save"
            android:textColor="@color/yellow"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>